syntax = "proto2";
option java_package = "com.mzm.firephoenix.protobuf";
option java_outer_classname = "CoreProtocol";

import "GameProtocol.proto";

//协议包，内部可包含多条协议内容
message MessagePack {
  required Cmd cmd = 1;//指令奖励
  optional int32 version = 2;   //版本号 
  optional int32 sessionId = 3; //sessionId
  optional MessageContent content = 4; //协议内容
}

enum Cmd {
	CMD_GETSERVER      =  0x010001;   //获取服务器信息
	CMD_REGISTER       =  0x010002;   //普通注册指令
	CMD_LOGIN          =  0x010003;   //普通登陆指令
	CMD_GUEST_LOGIN    =  0x010005;   //游客登陆
	CMD_HEART          =  0x010004;   //心跳
	CMD_SMS            =  0x010006;   //短信发送
	CMD_CARDS            =  0x010007;   //牌型
	CMD_COMPARE_CARDS            =  0x010008;   //比大小
	CMD_COMPARE_HISTORY_CARDS            =  0x010009;   //比倍历史牌型
	CMD_WIN            =  0x01000A;   //二手牌比大小得分
	CMD_COIN_SCORE     =  0x01000B;   //取分存分
	CMD_COMPARE_ONE_CARDS = 0x01000C;   //比倍历史单张牌型
	
	CMD_FOUR_KIND_TIME = 0X01000D;//获取大四梅随机倍数
	
	CMD_MACHINE_AUTO = 0X01000E;//获取当前状态是自动还是手动

	CMD_DATA_DISPLAY = 0X01000F;
	
	//玩家模块
	CMD_PLAYER_NICK_NAME = 0x020001;  //修改玩家昵称
	CMD_PLAYER_PIC    =  0x020002;  //修改头像
    CMD_MACHINE_LIST     =  0x020003;  //机台列表
    CMD_MACHINE_INFO         =  0x020004;  //单台机台信息
    CMD_MACHINE_ENTER       =  0x020005;  //选择机台
    CMD_MACHINE_LEAVE      =  0x020006;  //离开机台
    CMD_MACHINE_STAY    =  0x020007;  //是否留机
    CMD_PLAYER_BINDING    =  0x020008;  //绑定账号
	CMD_CARD_BET    =  0x020009;  //押注
	
    //竞技部分
	CMD_ENTERROOM      =  0x030001;  //进入房间
	CMD_OUTROOM        =  0x030002;  //退出房间
	CMD_ROOMINFO       =  0x030003;
	CMD_PAIINFO        =  0x030004;  //下发牌局信息
	CMD_SIT            =  0x030005;  //坐下
	CMD_STANDUP        =  0x030006;  //起立
	CMD_ROB_ZHUANG     =  0x030008;  //抢庄 
	CMD_YAZHU          =  0x03000B;  //押注
	CMD_CHAT      	   =  0x03000E;  //发送聊天信息
  	CMD_ROOM_STATICS   =  0x030010;  //房间统计信息
  	CMD_QZ_LIST        =  0x030011;  //抢庄列表
  	CMD_DOWN_ZHUANG    =  0x030012;  //下庄
  	CMD_BET_LIST       =  0x030013;  //下注列表
  	CMD_ROOM_UIDS      =  0x030014;  //房间UID列表
  	CMD_ROOM_PLAYER_LIST       =  0x030015;  //房间玩家详细信息列表

  	CMD_ROOM_PLAYER_CHANGE = 0x030020;//牌局状态4信息,玩家金钱变化
  	CMD_CARD_INFO      =  0x030021;//牌型信息
  	CMD_PAI_BASE_INFO     =  0x030022;//牌局基础信息
  	CMD_PAIINFO_3       =  0x030023;//状态3的牌局信息下发

	CMD_NOTICE = 0x030024; //公告
	CMD_LOGIN_OUT = 0x030025;//退出
	CMD_NET_WORK_ERROR = 0x030026;//服务器断开连接
}

//协议内容，内部为每次通信的数据模型
message MessageContent {
	required int32 result = 1;				//0正常 ,大于0 错误编码
	optional string message=2;				//错误信息
	
	optional LCRetServer lcRetServer = 3;	//获取游戏服务器
	optional CSRegsiter csRegister   = 4;	//普通注册
	optional SCRegister scRegister   = 5;
	optional CSLogin  csLogin        = 6;	//普通登陆
	optional SCLogin  scLogin        = 7;  
	
	optional CSGuestLogin csGuestLogin       = 9;//游客登陆
	optional SCGuestLogin scGuestLogin       = 10;

	optional CSCards csCards       = 11;//牌型
	optional SCCards scCards       = 12;
	optional CCCompareHistoryCards ccCompareHistoryCards       = 13;//历史牌型
	optional CSCompareCard csCompareCard       = 14;//比大小
	optional SCCompareCard scCompareCard       = 15;

	optional CSWin csWin   = 16;//二手牌比大小得分
	optional CCCoinScore ccCoinScore             = 17;//取分存分
	optional CCNickName ccNickName                     = 18;//修改玩家昵称
	optional CCHeadPic ccHeadPic                     = 19;//修改头像
	
	optional SCMachineList  scMachineList    = 20;//机台列表
	
	optional SCMachineInfo scMachineInfo         = 21;//单台机台信息
	optional CCEnterMachine ccEnterMachine         = 22;//选择机台
	 
	optional CCLeaveMachine ccLeaveMachine           	 = 23;//离开机台
	optional CCMachineStay ccMachineStay           	 = 24;//是否留机
	optional CCBinding ccBinding     = 25;//绑定账号
	
	
	optional SCNotice scNotice     = 26;//公告
	optional CSMachineList csMachineList = 27;
	
	optional CSLoginOut csLoginOut =28;//退出
	optional SCLoginOut scLoginOut =29;//退出
	optional CSCompareHistoryOneCard csCompareHistoryOneCard =30;//比倍历史单张牌型
	optional SCCompareHistoryOneCard SCCompareHistoryOneCard =31;//比倍历史单张牌型
	
	
	optional CSFourKindTime csFourKindTime =32;//获取大四梅随机倍数
	optional SCFourKindTime scFourKindTime =33;
	
	optional CSMachineAuto csMachineAuto =34;//获取当前状态是自动还是手动
	optional SCMachineAuto scMachineAuto =39;
	
	optional SCPlayerHistoryData scPlayerHistoryData =35;
	optional CSPlayerCardsData csPlayerCardsData =36;
	optional CSCardsBet csCardsBet =37;
	optional SCCardsBet scCardsBet =38;
}

//请求游戏服务器信息
message LCRetServer{
	optional string serverip =1;//服务器ip
	optional int32 port = 2;    //服务器端口
}

//普通注册
message CSRegsiter {
	required string account = 1;//账号
	required string password = 2;//密码
	optional string seoid= 3;//推广码
}

message CSLoginOut {
	required string loginOut = 1;//退出帐号
}

message SCLoginOut {
	optional int32 loginOut = 1;//退出帐号
}

message SCRegister {
	required string account = 1;//玩家账号
}

//普通登陆
message CSLogin{
	required string account = 1;//玩家账号
	required string password = 2;//密码
	required string udid = 3;
}

message SCLogin{
	required int32 pic = 1;//头像
	required string nickname = 2;//昵称
	required int32 score = 3;//分数
	optional int32 coin = 4;//金币
	required int32 nickNameCount = 5;//修改昵称次数
	required string seoid = 6;//代理商
}

//游客登录
message CSGuestLogin{
	optional string account = 1;//玩家账号
}

message SCGuestLogin{
	required string account = 1;//玩家账号
	required int32 pic = 2;//头像
	required string nickname = 3;//昵称
	required int32 score = 4;//分数
	required int32 nickNameCount = 5;//修改昵称次数
}

message CSPlayerInfo{
	required string guid =1 ;
}

message SCNotice{
	required string notice =1 ;
}

message CSCards{
	required int32 startIndex =1 ;//0-第一手牌 1-第二手牌
	optional int32 betScore =2 ;//下注分数 100,500,1000,2000
	optional string holdCards =3 ;//保牌牌型
}

message CSCardsBet{
	required int32 betScore =1 ;//下注分数 100,500,1000,2000
}

message SCCardsBet{
	optional int32 betScore =1 ;//下注分数 100,500,1000,2000
}

message SCCards{
	required int32 cardRate =1 ;//中奖倍率
	required string cards =2 ;//牌型
	optional string holdCards =3 ;//保牌牌型
	optional int32 realKind =4;//100-正宗大四梅
	optional int32 preSound =5;//前兆音1-有
}

message CCCompareHistoryCards{
	required string cards =1 ;//历史牌型
}

message CSCompareCard{
	required int32 bigSmall =1 ;//0-大 1-小
	required int32 betScore =2 ;//winScore赢的分数
	required int32 five = 3;//五梅免费比倍一次
}

message SCCompareCard{
	required int32 compareCard =1 ;//大小牌型2-A && 历史牌型
	required int32 winScore =2 ;//当前赢分
}

message CSCompareHistoryOneCard{
	required int32 compareCard =1 ;//默认0
}

message SCCompareHistoryOneCard{
	required int32 compareCard =1 ;//大小牌型2-A && 历史牌型
}

message CSWin{
	optional int32 win =1 ;//二手牌比大小得分
}

message CCCoinScore{
	required int32 score = 1;//分数
	required int32 coin = 2;//金币
}

message CCNickName{
	required string nickName = 1;//昵称 result=0 成功
	optional int32 nickNameCount = 2;//修改昵称次数
}

message CCHeadPic{
	required int32 headPic = 1;//头像 result=0 成功
}

//message CSMachineList {
	//required int32 machineList = 1;	
//}


message CSMachineList{
	required int32 machineList = 1;
}

message SCMachineList{
	repeated  SCMachineInfo scMachineInfo = 1;//机台信息
}

message SCMachineInfo{
	required string machineId = 1;//机台id
	required int32 machineType = 2;//0-待机1-在线2-留机
	optional int32 pic = 3;//头像
	optional string nickName = 4;//在线玩家昵称
}

message CCEnterMachine{
	required string machineId = 1;//机台id
}

message CCLeaveMachine {
	required string machineId = 1;//机台id
}

message CCMachineStay {
	required string machineId = 1;//机台id
	optional int32 machineType = 2;//0-取消留机1-留机
}

message CCBinding {
	required string account = 1;//账号
	required string password = 2;//密码
	required string seoid= 3;//推广码
}

message CSPlayerUpdate{
	optional string nickname =1 ;
	optional string password = 2;
	optional string pic = 3;
	optional string mobile = 4;
	optional int32 sex = 5;
}

message CSDepositStore{
	optional int32 gold = 1;//存钱数量
}

message SCDepositStore{
	optional int32 gold =1;//金币
	optional int32 deposit =2;//存款
}

message CSDepositDraw{
	optional int32 drawGold =1;//要取出的钱
}

message SCDepositDraw{
	optional int32 gold = 1;//金币
	optional int32 deposit = 2;//存款
}

message CSDepositGive{
	optional string targetid = 1;//对方的guid
	optional int32 drawGold =2;//要送的金币
}

message SCDepositGive{
	optional int32 deposit = 2;//存款
}

message SCDepositReceive{
	optional string senderid = 1;//发送者guid
	optional string receiveid = 2;//接收者guid
	optional int32 gold = 3;//被送了金币数
	optional int32 deposit = 4;//当前存款数
}

message CSFourKindTime{
	required int32 multiple = 1;
}

message SCFourKindTime{
	required int32 multiple=1;//返回倍数
}

message CSSMS{
	optional string mobile =1;
}

message CSMachineAuto{
	required int32 auto =1;//1-自动;0-手动
}

message SCMachineAuto{
	required int32 auto =1;//1-自动;0-手动
}



